src/third_party/nasm/travis/test/movd64.stderr
./travis/test/movd64.asm:11: error: mismatch in operand sizes
./travis/test/movd64.asm:17: error: invalid combination of opcode and operands
