src/third_party/nasm/travis/test/movd64.bin.t
A~»I~»I~»~~H~o—